// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> Default story renders snapshot 1`] = `
<div
  class="dropdown w-60"
  data-testid="dropdown"
>
  <label
    class="label"
    id="headlessui-listbox-label-1"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-3"
    aria-expanded="true"
    aria-haspopup="true"
    aria-labelledby="headlessui-listbox-label-1 headlessui-listbox-button-2"
    class="dropdownButton"
    id="headlessui-listbox-button-2"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="svgIcon"
      fill="currentColor"
      height="1.25rem"
      style="--svg-icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-label-1"
    aria-orientation="vertical"
    class="options"
    id="headlessui-listbox-options-3"
    role="listbox"
    tabindex="0"
  >
    <li
      class="option"
      id="headlessui-listbox-option-4"
      role="option"
      tabindex="-1"
    >
      <span
        class="optionContent"
      >
        Dogs
      </span>
    </li>
    <li
      class="option"
      id="headlessui-listbox-option-5"
      role="option"
      tabindex="-1"
    >
      <span
        class="optionContent"
      >
        Cats
      </span>
    </li>
    <li
      class="option"
      id="headlessui-listbox-option-6"
      role="option"
      tabindex="-1"
    >
      <span
        class="optionContent"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> DefaultWithoutVisibleLabel story renders snapshot 1`] = `
<div
  class="dropdown w-60"
  data-testid="dropdown"
>
  <label
    class="label srOnly"
    id="headlessui-listbox-label-7"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-9"
    aria-expanded="true"
    aria-haspopup="true"
    aria-labelledby="headlessui-listbox-label-7 headlessui-listbox-button-8"
    class="dropdownButton"
    id="headlessui-listbox-button-8"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="svgIcon"
      fill="currentColor"
      height="1.25rem"
      style="--svg-icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-label-7"
    aria-orientation="vertical"
    class="options"
    id="headlessui-listbox-options-9"
    role="listbox"
    tabindex="0"
  >
    <li
      class="option"
      id="headlessui-listbox-option-10"
      role="option"
      tabindex="-1"
    >
      <span
        class="optionContent"
      >
        Dogs
      </span>
    </li>
    <li
      class="option"
      id="headlessui-listbox-option-11"
      role="option"
      tabindex="-1"
    >
      <span
        class="optionContent"
      >
        Cats
      </span>
    </li>
    <li
      class="option"
      id="headlessui-listbox-option-12"
      role="option"
      tabindex="-1"
    >
      <span
        class="optionContent"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> UsingChildrenProp story renders snapshot 1`] = `
<div
  class="dropdown w-60"
  data-testid="dropdown"
>
  <label
    class="label"
    id="headlessui-listbox-label-13"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-15"
    aria-expanded="true"
    aria-haspopup="true"
    aria-labelledby="headlessui-listbox-label-13 headlessui-listbox-button-14"
    class="dropdownButton"
    id="headlessui-listbox-button-14"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="svgIcon"
      fill="currentColor"
      height="1.25rem"
      style="--svg-icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-label-13"
    aria-orientation="vertical"
    class="options"
    id="headlessui-listbox-options-15"
    role="listbox"
    tabindex="0"
  >
    <li
      class="option"
      id="headlessui-listbox-option-16"
      role="option"
      tabindex="-1"
    >
      <span
        class="optionContent"
      >
        Dogs
      </span>
    </li>
    <li
      class="option"
      id="headlessui-listbox-option-17"
      role="option"
      tabindex="-1"
    >
      <span
        class="optionContent"
      >
        Cats
      </span>
    </li>
    <li
      class="option"
      id="headlessui-listbox-option-18"
      role="option"
      tabindex="-1"
    >
      <span
        class="optionContent"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> UsingChildrenPropAndNoVisibleLabel story renders snapshot 1`] = `
<div
  class="dropdown w-60"
  data-testid="dropdown"
>
  <label
    class="label srOnly"
    id="headlessui-listbox-label-19"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-21"
    aria-expanded="true"
    aria-haspopup="true"
    aria-labelledby="headlessui-listbox-label-19 headlessui-listbox-button-20"
    class="dropdownButton"
    id="headlessui-listbox-button-20"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="svgIcon"
      fill="currentColor"
      height="1.25rem"
      style="--svg-icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-label-19"
    aria-orientation="vertical"
    class="options"
    id="headlessui-listbox-options-21"
    role="listbox"
    tabindex="0"
  >
    <li
      class="option"
      id="headlessui-listbox-option-22"
      role="option"
      tabindex="-1"
    >
      <span
        class="optionContent"
      >
        Dogs
      </span>
    </li>
    <li
      class="option"
      id="headlessui-listbox-option-23"
      role="option"
      tabindex="-1"
    >
      <span
        class="optionContent"
      >
        Cats
      </span>
    </li>
    <li
      class="option"
      id="headlessui-listbox-option-24"
      role="option"
      tabindex="-1"
    >
      <span
        class="optionContent"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> UsingFunctionChildrenProp story renders snapshot 1`] = `
<div
  aria-label="Favorite Animal"
  class="dropdown w-60"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-26"
    aria-expanded="true"
    aria-haspopup="true"
    class="p-4 rounded-md border border-neutral-300"
    id="headlessui-listbox-button-25"
    type="button"
  >
    Select
    <svg
      aria-hidden="true"
      class="ml-2 svgIcon"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11 18h2c.55 0 1-.45 1-1s-.45-1-1-1h-2c-.55 0-1 .45-1 1s.45 1 1 1zM3 7c0 .55.45 1 1 1h16c.55 0 1-.45 1-1s-.45-1-1-1H4c-.55 0-1 .45-1 1zm4 6h10c.55 0 1-.45 1-1s-.45-1-1-1H7c-.55 0-1 .45-1 1s.45 1 1 1z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-button-25"
    aria-orientation="vertical"
    class="options"
    id="headlessui-listbox-options-26"
    role="listbox"
    tabindex="0"
  >
    <li
      class="option"
      id="headlessui-listbox-option-27"
      role="option"
      tabindex="-1"
    >
      <span
        class="optionContent"
      >
        Dogs
      </span>
    </li>
    <li
      class="option"
      id="headlessui-listbox-option-28"
      role="option"
      tabindex="-1"
    >
      <span
        class="optionContent"
      >
        Cats
      </span>
    </li>
    <li
      class="option"
      id="headlessui-listbox-option-29"
      role="option"
      tabindex="-1"
    >
      <span
        class="optionContent"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> renders the OpenByDefault story 1`] = `
<div
  class="dropdown w-60"
  data-testid="dropdown"
>
  <label
    class="label"
    id="headlessui-listbox-label-30"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-32"
    aria-expanded="true"
    aria-haspopup="true"
    aria-labelledby="headlessui-listbox-label-30 headlessui-listbox-button-31"
    class="dropdownButton"
    id="headlessui-listbox-button-31"
    type="button"
  >
    <span>
      Cats
    </span>
    <svg
      aria-hidden="true"
      class="svgIcon"
      fill="currentColor"
      height="1.25rem"
      style="--svg-icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15.88 9.29L12 13.17 8.12 9.29a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41l4.59 4.59c.39.39 1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41-.39-.38-1.03-.39-1.42 0z"
      />
    </svg>
  </button>
  <ul
    aria-activedescendant="headlessui-listbox-option-37"
    aria-labelledby="headlessui-listbox-label-30"
    aria-orientation="vertical"
    class="options"
    id="headlessui-listbox-options-32"
    role="listbox"
    tabindex="0"
  >
    <li
      class="option"
      id="headlessui-listbox-option-36"
      role="option"
      tabindex="-1"
    >
      <span
        class="optionContent"
      >
        Dogs
      </span>
    </li>
    <li
      aria-selected="true"
      class="option optionActive optionSelected"
      id="headlessui-listbox-option-37"
      role="option"
      tabindex="-1"
    >
      <span
        class="selectedIconContainer"
      >
        <svg
          aria-hidden="true"
          class="svgIcon"
          fill="currentColor"
          height="1.25rem"
          style="--svg-icon-size: 1.25rem;"
          viewBox="0 0 24 24"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 16.17L5.53 12.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71c.39-.39.39-1.02 0-1.41a.9959.9959 0 00-1.41 0L9 16.17z"
          />
        </svg>
      </span>
      <span
        class="optionContent"
      >
        Cats
      </span>
    </li>
    <li
      class="option"
      id="headlessui-listbox-option-38"
      role="option"
      tabindex="-1"
    >
      <span
        class="optionContent"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;
